[package]
name = "benches"
version = "0.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"
publish = false

[[bin]]
name = "dummy"
path = ".dummy.rs"

[dependencies]
criterion = "0.3.3"
rigid = { path = "../rigid" }
rigid_runtime = { path = "../rigid_runtime" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"

[[bench]]
name = "benches"
path = "./benches.rs"
harness = false
