[package]
name = "benches"
version = "0.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"
publish = false

[[bin]]
name = "dummy"
path = ".dummy.rs"

[dependencies]
criterion = { version = "0.3.3", features = ["real_blackbox"] }
json = "0.12.4"
rigid = { path = "../rigid" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
simd-json = "0.3.21"

[[bench]]
name = "benches"
path = "benches.rs"
harness = false
