[package]
name = "benches"
version = "0.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"
publish = false

[dev-dependencies]
criterion = { version = "0.3.3", features = ["real_blackbox"] }
rigid = { path = "../rigid" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[[bench]]
name = "benches"
harness = false
