[package]
name = "rigid"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
rigid_runtime = { path = "../rigid_runtime" }
syn = "1.0.44"

[dev-dependencies]
criterion = "0.3.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
