[package]
name = "rigid"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
license = "MIT"
description = "A JSON deserialization framework"
homepage = "https://github.com/aymericbeaumet/rigid"
repository = "https://github.com/aymericbeaumet/rigid"
documentation = "https://docs.rs/rigid/"
keywords = ["json", "deserialization"]
categories = ["encoding"]
readme = "../readme.md"
edition = "2018"

[dependencies]
rigid_derive = { version = "=0.1.0", path = "../rigid_derive" }
rigid_runtime = { version = "=0.1.0", path = "../rigid_runtime" }
