[package]
name = "rigid_derive"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
license = "MIT"
description = "Rigid's derive proc macro"
homepage = "https://github.com/aymericbeaumet/rigid"
repository = "https://github.com/aymericbeaumet/rigid"
documentation = "https://docs.rs/rigid_derive/"
keywords = ["json", "deserialization"]
categories = ["encoding"]
readme = "../readme.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
rigid_runtime = { version = "=0.1.0", path = "../rigid_runtime" }
syn = "1.0.44"
