[package]
name = "rigid_runtime"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
license = "MIT"
description = "Rigid's runtime helpers"
homepage = "https://github.com/aymericbeaumet/rigid"
repository = "https://github.com/aymericbeaumet/rigid"
documentation = "https://docs.rs/rigid_runtime/"
keywords = ["json", "deserialization"]
categories = ["encoding"]
readme = "../readme.md"
edition = "2018"
