[package]
name = "tests"
version = "0.0.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2018"
publish = false

[dependencies]
rigid = { path = "../rigid" }
rigid_runtime = { path = "../rigid_runtime" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"

# we should all be happy in life, including cargo
# i would like this to be a test-only package, but this is not possible
[lib]
name = "tests"
path = "tests.rs"
